--- a/index.html
+++ b/index.html
@@ -3,17 +3,50 @@
 	<head>
     	<meta charset="utf-8">
     	<title>Relaxr</title>
-        <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	
     <body>
-        <div class="companyname">
-                 <h1>Relaxr</h1>
+        <h1>Relaxr</h1>
+        <h2>Get piece of mind with a single tap</h2>
+        <a href="GetItNow.html" class="button">Get It Now</a>    
+	    <div class="container">
+        <h3>Benefits</h3>
+        <p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+              <div class="benefits">
+                    <ul>
+                        <li>Schedule meetings for you</li>
+                        <li>Excel automation to complete your work for you</li>
+                        <li>Responds to emails on your behalf</li>
+                        <li>Does all your work for you with our revolutionary AI technology</li>
+                    </ul>
+              </div>
         </div>
-        <div class="landingmessage">
-                <h2>Get piece of mind with a single tap</h2>
+        <div class="container1">   
+            <div class="quote">
+                "Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."
+            <br>
+            <span>- Amanda, Intuit</span>
+            </div> 
         </div>
-        <a href="GetItNow.html" class="button">Get It Now</a>
-	</body>
+        <div class="container2">
+            <a href="index.html" class="button2">Sign Up Now</a>
+        </div>
+        <div class="container3">    
+            <div class="Relaxr2">
+                Relaxr
+            </div>
+            <div class="socialmedia">
+                <div class="twitter">
+               <a href="https://twitter.com/?lang=en"><img alt="follow us on twitter" src="images/twitter.png" border=0></a>
+            </div>
+            <div class="facebook">
+               <a href="https://www.facebook.com/"><img alt="follow us on facebook" src="images/facebook.png" border=0></a>
+            </div>
+            </div>
+			<footer>
+				&copy; Copyright 2015. Relaxr
+			</footer>
+          </div>
+    </body>
 </html>
