--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-<html class="home-pg">
+<html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<title>Relaxr</title>
+    	<meta name="description" content="The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.">
+
+		<title>Relaxr Landing Page</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
+
+		<!-- external CSS link -->
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+
 	</head>
-	
-    <body>
-        <h1>Relaxr</h1>
-        <h2>Get piece of mind with a single tap</h2>
-        <a href="GetItNow.html" class="button">Get It Now</a>    
-	    <div class="container">
-        <h3>Benefits</h3>
-        <p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
-              <div class="benefits">
-                    <ul>
-                        <li>Schedule meetings for you</li>
-                        <li>Excel automation to complete your work for you</li>
-                        <li>Responds to emails on your behalf</li>
-                        <li>Does all your work for you with our revolutionary AI technology</li>
-                    </ul>
-              </div>
-        </div>
-        <div class="container1">   
-            <div class="quote">
-                "Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."
-            <br>
-            <span>- Amanda, Intuit</span>
-            </div> 
-        </div>
-        <div class="container2">
-            <a href="index.html" class="button2">Sign Up Now</a>
-        </div>
-        <div class="container3">    
-            <div class="Relaxr2">
-                Relaxr
-            </div>
-            <div class="socialmedia">
-                <div class="twitter">
-               <a href="https://twitter.com/?lang=en"><img alt="follow us on twitter" src="images/twitter.png" border=0></a>
-            </div>
-            <div class="facebook">
-               <a href="https://www.facebook.com/"><img alt="follow us on facebook" src="images/facebook.png" border=0></a>
-            </div>
-            </div>
-			<footer>
-				&copy; Copyright 2015. Relaxr
-			</footer>
-          </div>
-    </body>
+	<body>
+		<header>
+			<div class="container">
+				<h1 class="logo">Relaxr</h1>
+				<h2>Get piece of mind with a single tap</h2>
+				<a class="button yellow" href="#">Get it Now</a>
+			</div>
+		</header>
+		<section id="benefits">
+			<div class="container">
+				<h3>Benefits</h3>
+				<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+				<ul>
+					<li>Schedule meetings for you</li>
+					<li>Excel automation to complete your work for you</li>
+					<li>Responds to emails on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
+				</ul>
+			</div>
+		</section>
+		<div id="testimonial">
+			<div class="container">
+				<blockquote>&ldquo;Relaxr changed my life. I&rsquo;ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.&rdquo;
+				<span>- Amanda, Intuit</span></blockquote>
+			</div>
+		</div>
+		<aside>
+			<a class="button blue" href="#">Sign Up Now!</a>
+		</aside>
+		<footer>
+			<h4 class="logo">Relaxr</h4>
+
+			<ul>
+				<li><a href="#"><img src="images/twitter.png" alt="Twitter logo"></a></li>
+				<li><a href="#"><img src="images/facebook.png" alt="Facebook logo"></a></li>
+			</ul>
+
+			<p class="copyright">Copyright 2015. Relaxr.</p>
+		</footer>
+	</body>
 </html>
